update image paths

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         height: auto;
         filter: drop-shadow(0 0 15px rgba(255, 0, 0, 0.7));
         animation: pulse 2s infinite;
-        image-rendering: pixelated; /* Gives retro pixel art look */
+        image-rendering: pixelated;
         image-rendering: -moz-crisp-edges;
         image-rendering: crisp-edges;
     }
@@ -202,7 +202,7 @@
     <div id="loading-screen">
         <div class="loading-logo">
             <!-- Kornet Logo Image from GitHub -->
-            <img src="https://raw.githubusercontent.com/mane131/Kornet-Wiki/refs/heads/main/kornet.png" 
+            <img src="kornet.png" 
                  alt="Kornet Logo" 
                  id="kornet-logo">
         </div>
@@ -295,9 +295,9 @@
         </footer>
     </div>
 
-<!-- External JavaScript -->
-<script src="js/loading.js"></script>
-<script src="js/main.js"></script>
+<!-- External JavaScript - UPDATED PATHS -->
+<script src="loading.js"></script>
+<script src="main.js"></script>
 
 </body>
 </html>
